--- a/css/partials/_buttons.scss
+++ b/css/partials/_buttons.scss
@@ -1,18 +1,15 @@
 .btn {
-  background: linear-gradient(220.94deg, #a950c4 14.43%, #82269e 85.28%);
-  border-radius: 14px;
+  background: linear-gradient(220.94deg, #68D250 14.43%, #2E9A18 85.28%);
+  border-radius: 16px;
   text-decoration: none;
-  @include typeface-2(p3, desktop);
+  @include typeface-2(p2, desktop);
   color: $white-light;
 
-  padding: 12px 32px;
+  padding: 16px 64px;
 
   transition: 0.3s ease;
 
-  box-shadow: 0px 17px 17px rgba(204, 204, 204, 0.04),
-    0px 5.125px 5.125px rgba(204, 204, 204, 0.0260636),
-    0px 2.12866px 2.12866px rgba(204, 204, 204, 0.02),
-    0px 0.769896px 0.769896px rgba(204, 204, 204, 0.0139364);
+  box-shadow: 0px 51px 80px rgba(60, 196, 29, 0.1), 0px 15.375px 24.1177px rgba(60, 196, 29, 0.07), 0px 6.38599px 10.0172px rgba(60, 196, 29, 0.05), 0px 2.30969px 3.62304px rgba(60, 196, 29, 0.03);
 
   &:hover {
     box-shadow: 0px 17px 17px rgba(169, 80, 196, 0.13),
@@ -22,6 +19,11 @@
     transform: scale(1.02);
     opacity: 0.9;
   }
+
+  @include responsive(s){
+    display: none;
+  }
+
 }
 
 a {
@@ -76,12 +78,5 @@ a {
     &:after {
       width: 90%;
     }
-  }
-}
-
-.button {
-  transition: 0.5s ease;
-  &:hover {
-    transform: scale(1.05);
   }
 }
