--- a/css/partials/_buttons.scss
+++ b/css/partials/_buttons.scss
@@ -12,16 +12,9 @@
   box-shadow: 0px 51px 80px rgba(60, 196, 29, 0.1), 0px 15.375px 24.1177px rgba(60, 196, 29, 0.07), 0px 6.38599px 10.0172px rgba(60, 196, 29, 0.05), 0px 2.30969px 3.62304px rgba(60, 196, 29, 0.03);
 
   &:hover {
-    box-shadow: 0px 17px 17px rgba(169, 80, 196, 0.13),
-      0px 5.125px 5.125px rgba(169, 80, 196, 0.0847066),
-      0px 2.12866px 2.12866px rgba(169, 80, 196, 0.065),
-      0px 0.769896px 0.769896px rgba(169, 80, 196, 0.0452935);
+    box-shadow: 0px 0px 100px rgba(60, 196, 29, 0.6), 0px 0px 24.1177px rgba(60, 196, 29, 0.5), 0px 0px 10.0172px rgba(60, 196, 29, 0.3), 0px 0px 3.62304px rgba(60, 196, 29, 0.15);
     transform: scale(1.02);
     opacity: 0.9;
-  }
-
-  @include responsive(s){
-    display: none;
   }
 
 }
