--- a/css/partials/_typography.scss
+++ b/css/partials/_typography.scss
@@ -94,7 +94,7 @@ h4 {
 
 h5 {
   text-transform: uppercase;
-  background: linear-gradient(220.94deg, #a950c4 14.43%, #82269e 85.28%);
+  background: linear-gradient(220.94deg, #68D250 14.43%, #2E9A18 85.28%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -111,6 +111,14 @@ p {
   @include typeface-2(p2, desktop);
   @include responsive(s) {
     @include typeface-2(p2, mobile);
+  }
+}
+
+.body-1 {
+  color: $gray-4;
+  @include typeface-2(p1, desktop);
+  @include responsive(s) {
+    @include typeface-2(p1, mobile);
   }
 }
 
