Animation Hero ok

--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -136,6 +136,8 @@ $container-s: 540px;
   height: 90vh;
   overflow: visible;
 
+  z-index: 800;
+
   @include responsive(s) {
     height: auto;
   }
@@ -155,4 +157,13 @@ $container-s: 540px;
 
 .hero__trophy{
   width: 240px;
+}
+
+.hero__bg-money{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  
+  z-index: -10;
 }
