--- a/css/partials/_animations.scss
+++ b/css/partials/_animations.scss
@@ -1,6 +1,6 @@
 // ANIMATIONS HERO
 
-.money-1 {
+#money-1 {
 	position: absolute;
 	top: -10px;
 
@@ -9,7 +9,7 @@
 	animation: money-move 4.5s linear infinite;
 }
 
-.money-2 {
+#money-2 {
 	position: absolute;
 	top: -120px;
 	z-index: -5;
@@ -17,7 +17,7 @@
 	animation: money-move 4s linear infinite;
 }
 
-.money-3 {
+#money-3 {
 	position: absolute;
 	top: -50px;
 	z-index: -5;
@@ -25,7 +25,7 @@
 	animation: money-move 3s linear infinite;
 }
 
-.money-4 {
+#money-4 {
 	position: absolute;
 	top: -40px;
 	z-index: -5;
@@ -33,7 +33,7 @@
 	animation: money-move 2.5s linear infinite;
 }
 
-.money-5 {
+#money-5 {
 	position: absolute;
 	top: -60px;
 	z-index: -5;
