--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -132,11 +132,11 @@ $container-s: 540px;
 }
 
 .hero {
-  padding-top: 40px;
+  padding-top: 160px;
   height: 90vh;
   overflow: visible;
 
-  z-index: 800;
+  z-index: 500;
 
   @include responsive(s) {
     height: auto;
@@ -164,6 +164,10 @@ $container-s: 540px;
   width: 100%;
   height: 100%;
   top: 0;
+
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
   
-  z-index: -10;
+  z-index: -100;
 }
