--- a/css/style.css
+++ b/css/style.css
@@ -102,10 +102,10 @@
 }
 
 .hero {
-  padding-top: 40px;
+  padding-top: 160px;
   height: 90vh;
   overflow: visible;
-  z-index: 800;
+  z-index: 500;
 }
 @media screen and (max-width: 960px) {
   .hero {
@@ -130,7 +130,10 @@
   width: 100%;
   height: 100%;
   top: 0;
-  z-index: -10;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  z-index: -100;
 }
 
 h1 {
@@ -657,12 +660,13 @@ header {
   background-color: transparent;
   box-shadow: 0 0 0 rgba(255, 255, 255, 0);
   transition: 0.5s ease;
+  z-index: 800;
+  position: fixed;
 }
 
 .active-header {
   background-color: #F6FFF6;
   box-shadow: 0px 51px 80px rgba(169, 80, 196, 0.08), 0px 15.375px 24.1177px rgba(169, 80, 196, 0.0521271), 0px 6.38599px 10.0172px rgba(169, 80, 196, 0.04), 0px 2.30969px 3.62304px rgba(169, 80, 196, 0.0278729);
-  z-index: 800;
   position: fixed;
 }
 
@@ -777,44 +781,100 @@ svg {
   margin: 0 auto;
 }
 
-#money-1 {
-  position: absolute;
-  top: -10px;
+.money-2 {
   z-index: -5;
-  -webkit-animation: money-move 4.5s linear infinite;
-          animation: money-move 4.5s linear infinite;
+  -webkit-animation: money-move 1.5s linear infinite;
+          animation: money-move 1.5s linear infinite;
 }
 
-#money-2 {
-  position: absolute;
-  top: -120px;
+.money-13 {
   z-index: -5;
-  -webkit-animation: money-move 4s linear infinite;
-          animation: money-move 4s linear infinite;
+  -webkit-animation: money-move 2s linear infinite;
+          animation: money-move 2s linear infinite;
 }
 
-#money-3 {
-  position: absolute;
-  top: -50px;
-  z-index: -5;
-  -webkit-animation: money-move 3s linear infinite;
-          animation: money-move 3s linear infinite;
-}
-
-#money-4 {
-  position: absolute;
-  top: -40px;
+.money-8 {
   z-index: -5;
   -webkit-animation: money-move 2.5s linear infinite;
           animation: money-move 2.5s linear infinite;
 }
 
-#money-5 {
-  position: absolute;
-  top: -60px;
+.money-7 {
   z-index: -5;
-  -webkit-animation: money-move 1.5s linear infinite;
-          animation: money-move 1.5s linear infinite;
+  -webkit-animation: money-move 3s linear infinite;
+          animation: money-move 3s linear infinite;
+}
+
+.money-5 {
+  z-index: -5;
+  -webkit-animation: money-move 3.5s linear infinite;
+          animation: money-move 3.5s linear infinite;
+}
+
+.money-14 {
+  z-index: -5;
+  -webkit-animation: money-move 4s linear infinite;
+          animation: money-move 4s linear infinite;
+}
+
+.money-4 {
+  z-index: -5;
+  -webkit-animation: money-move 4.5s linear infinite;
+          animation: money-move 4.5s linear infinite;
+}
+
+.money-10 {
+  z-index: -5;
+  -webkit-animation: money-move 5s linear infinite;
+          animation: money-move 5s linear infinite;
+}
+
+.money-11 {
+  z-index: -5;
+  -webkit-animation: money-move 5.5s linear infinite;
+          animation: money-move 5.5s linear infinite;
+}
+
+.money-6 {
+  z-index: -5;
+  -webkit-animation: money-move 6s linear infinite;
+          animation: money-move 6s linear infinite;
+}
+
+.money-12 {
+  z-index: -5;
+  -webkit-animation: money-move 6.5s linear infinite;
+          animation: money-move 6.5s linear infinite;
+}
+
+.money-8 {
+  z-index: -5;
+  -webkit-animation: money-move 7s linear infinite;
+          animation: money-move 7s linear infinite;
+}
+
+.money-1 {
+  z-index: -5;
+  -webkit-animation: money-move 7.5s linear infinite;
+          animation: money-move 7.5s linear infinite;
+}
+
+.money-9 {
+  z-index: -5;
+  -webkit-animation: money-move 8s linear infinite;
+          animation: money-move 8s linear infinite;
+}
+
+.money-3 {
+  z-index: -5;
+  -webkit-animation: money-move 8.5s linear infinite;
+          animation: money-move 8.5s linear infinite;
+}
+
+.money-15 {
+  z-index: -5;
+  -webkit-animation: money-move 9s linear infinite;
+          animation: money-move 9s linear infinite;
 }
 
 @-webkit-keyframes money-move {
