--- a/css/partials/_colors.scss
+++ b/css/partials/_colors.scss
@@ -46,6 +46,11 @@ $shadow-black: 0px 80px 80px rgba(16, 16, 16, 0.06),
 	0px 10.0172px 10.0172px rgba(16, 16, 16, 0.03),
 	0px 3.62304px 3.62304px rgba(16, 16, 16, 0.0209047);
 
+$shadow-color: 0px 51px 80px rgba(60, 196, 29, 0.1),
+	0px 15.375px 24.1177px rgba(60, 196, 29, 0.07),
+	0px 6.38599px 10.0172px rgba(60, 196, 29, 0.05),
+	0px 2.30969px 3.62304px rgba(60, 196, 29, 0.03);
+
 // Gradient
 
-$gradient-1: linear-gradient(220.94deg, #68D250 14.43%, #2E9A18 85.28%);
+$gradient-1: linear-gradient(220.94deg, #68d250 14.43%, #2e9a18 85.28%);
