--- a/css/partials/_spacing.scss
+++ b/css/partials/_spacing.scss
@@ -4,6 +4,7 @@ $gap-2: 16px;
 $gap-3: 48px;
 $gap-4: 72px;
 $gap-5: 128px;
+$gap-6: 32px;
 
 .s-0 {
   margin: 0;
@@ -40,6 +41,10 @@ $gap-5: 128px;
 }
 .mt-5 {
   margin-top: $gap-5;
+}
+
+.mt-6 {
+  margin-top: $gap-6;
 }
 
 .ml-1 {
@@ -252,4 +257,28 @@ $gap-5: 128px;
 .py-5 {
   padding-top: $gap-5;
   padding-bottom: $gap-5;
+}
+
+.gap-1{
+  gap: 8px;
+}
+
+.gap-2{
+  gap: 16px;
+}
+
+.gap-3{
+  gap: 24px;
+}
+
+.gap-4{
+  gap: 32px;
+}
+
+.gap-5{
+  gap: 40px;
+}
+
+.gap-6{
+  gap: 48px;
 }
