--- a/css/partials/_menu.scss
+++ b/css/partials/_menu.scss
@@ -11,10 +11,7 @@ header {
 
 .active-header {
   background-color: $white-normal;
-  box-shadow: 0px 51px 80px rgba(169, 80, 196, 0.08),
-    0px 15.375px 24.1177px rgba(169, 80, 196, 0.0521271),
-    0px 6.38599px 10.0172px rgba(169, 80, 196, 0.04),
-    0px 2.30969px 3.62304px rgba(169, 80, 196, 0.0278729);
+  box-shadow: $shadow-color;
 
     position: fixed;
 }
