--- a/css/style.css
+++ b/css/style.css
@@ -791,7 +791,7 @@ header {
 
 .active-header {
   background-color: #f6fff6;
-  box-shadow: 0px 51px 80px rgba(169, 80, 196, 0.08), 0px 15.375px 24.1177px rgba(169, 80, 196, 0.0521271), 0px 6.38599px 10.0172px rgba(169, 80, 196, 0.04), 0px 2.30969px 3.62304px rgba(169, 80, 196, 0.0278729);
+  box-shadow: 0px 51px 80px rgba(60, 196, 29, 0.1), 0px 15.375px 24.1177px rgba(60, 196, 29, 0.07), 0px 6.38599px 10.0172px rgba(60, 196, 29, 0.05), 0px 2.30969px 3.62304px rgba(60, 196, 29, 0.03);
   position: fixed;
 }
 
