--- a/css/partials/_spacing.scss
+++ b/css/partials/_spacing.scss
@@ -5,6 +5,7 @@ $gap-3: 48px;
 $gap-4: 72px;
 $gap-5: 128px;
 $gap-6: 32px;
+$gap-7: 56px;
 
 .s-0 {
   margin: 0;
@@ -42,9 +43,11 @@ $gap-6: 32px;
 .mt-5 {
   margin-top: $gap-5;
 }
-
 .mt-6 {
   margin-top: $gap-6;
+}
+.mt-7{
+  margin-top: $gap-7;
 }
 
 .ml-1 {
