--- a/css/partials/_animations.scss
+++ b/css/partials/_animations.scss
@@ -4,87 +4,142 @@
 	z-index: -5;
 
 	animation: money-move 1.7s linear infinite;
+
+	@include responsive(s) {
+		animation: money-move__mobile 1.7s linear infinite;
+	}
 }
 
 .money-13 {
 	z-index: -5;
 
 	animation: money-move 2s linear infinite;
+	@include responsive(s) {
+		animation: money-move__mobile 2s linear infinite;
+	}
 }
 
 .money-8 {
 	z-index: -5;
 
 	animation: money-move 2.5s linear infinite;
+	@include responsive(s) {
+		animation: money-move__mobile 2.5s linear infinite;
+	}
 }
 
 .money-7 {
 	z-index: -5;
 
 	animation: money-move 3s linear infinite;
+	@include responsive(s) {
+		animation: money-move__mobile 3s linear infinite;
+	}
 }
 
 .money-5 {
 	z-index: -5;
 
 	animation: money-move 3.5s linear infinite;
+	@include responsive(s) {
+		animation: money-move__mobile 3.5s linear infinite;
+	}
 }
 
 .money-14 {
 	z-index: -5;
 
 	animation: money-move 4s linear infinite;
+	@include responsive(s) {
+		animation: money-move__mobile 4s linear infinite;
+	}
 }
 
 .money-4 {
 	z-index: -5;
 
 	animation: money-move 4.5s linear infinite;
+	@include responsive(s) {
+		animation: money-move__mobile 4.5s linear infinite;
+	}
 }
 .money-10 {
 	z-index: -5;
 
 	animation: money-move 5s linear infinite;
+	@include responsive(s) {
+		animation: money-move__mobile 5s linear infinite;
+	}
 }
 .money-11 {
 	z-index: -5;
 
 	animation: money-move 5.5s linear infinite;
+	@include responsive(s) {
+		animation: money-move__mobile 5.5s linear infinite;
+	}
 }
 .money-6 {
 	z-index: -5;
 
 	animation: money-move 6s linear infinite;
+	@include responsive(s) {
+		animation: money-move__mobile 6s linear infinite;
+
+	}
 }
 .money-12 {
 	z-index: -5;
 
 	animation: money-move 6.5s linear infinite;
+	@include responsive(s) {
+		animation: money-move__mobile 6.5s linear infinite;
+
+	}
 }
 .money-8 {
 	z-index: -5;
 
 	animation: money-move 7s linear infinite;
+	@include responsive(s) {
+		animation: money-move__mobile 7s linear infinite;
+
+	}
 }
 .money-1 {
 	z-index: -5;
 
 	animation: money-move 7.5s linear infinite;
+	@include responsive(s) {
+		animation: money-move__mobile 7.5s linear infinite;
+	}
 }
 .money-9 {
 	z-index: -5;
 
 	animation: money-move 8s linear infinite;
+	@include responsive(s) {
+		animation: money-move__mobile 8s linear infinite;
+
+	}
 }
 .money-3 {
 	z-index: -5;
 
 	animation: money-move 8.5s linear infinite;
+	@include responsive(s) {
+		animation: money-move__mobile 8.5s linear infinite;
+
+	}
 }
 .money-15 {
 	z-index: -5;
 
 	animation: money-move 9s linear infinite;
+	@include responsive(s) {
+		animation: money-move__mobile 9s linear infinite;
+
+	}
 }
 
 @keyframes money-move {
@@ -93,6 +148,15 @@
 	}
 	to {
 		transform: translateY(120vh);
+	}
+}
+
+@keyframes money-move__mobile {
+	from {
+		transform: translateY(-10vh);
+	}
+	to {
+		transform: translateY(100vh);
 	}
 }
 
@@ -126,7 +190,6 @@
 	animation: ball 4s linear 0.5s infinite alternate;
 }
 
-
 @keyframes ball {
 	from {
 		transform: translate(0, -40px);
@@ -135,5 +198,3 @@
 		transform: translate(-40px, 40px);
 	}
 }
-
-
